prevent wrapping of tabs

--- a/src/styles/tabs.css
+++ b/src/styles/tabs.css
@@ -1,5 +1,6 @@
 .etabs-tabs {
     background: #282828;
+    white-space: nowrap;
 }
 
 .etabs-tab.visible {
